# ap2_lucas_rodor

./: README.md  main.py  pyproject.toml
backend/: .jupyter  db.sqlite3
backend/administracao/: apis.py  models.py  schemas.py  views.py
backend/core/: routers.py  settings.py  urls.py
backend/webscrapping/: apis.py  apps.py  models.py  schemas.py  views.py
backend/webscrapping/migrations/: 0001_initial.py
backend/webscrapping/scraping/: extrator.py  filtros.py  navegador.py  teste.py  tratamento.py
frontend/: app.py  app_scrapping.py  apprascunho.py
frontend/components/: aluno_card.py  aluno_form.py  boletim_view.py  nota_form.py
frontend/paginas/: alunos.py  boletins.py  home.py  notas.py  sobre.py
frontend/services/: api.py
frontend/utils/: style.py
